# dify-log-retriever

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  dify_api.rs  dsl.rs  export.rs  lib.rs  main.rs  models.rs
src/components/: AppsPage.tsx  ConfigPage.tsx  ConversationsPage.tsx  DashboardPage.tsx  DslBackupPage.tsx  ExportPage.tsx  FeedbackPage.tsx  Layout.tsx  PerformancePage.tsx  SyncPage.tsx
